--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body * {
 #switch button {
   width: 32px;
   height: 32px;
-  background: #fffffff1 var(--switch-bg-url) no-repeat center;
+  background: #fcfcfc var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
  
